tunneling-outbound-traffic-kind/samples/https-proxy/gateway/tls/passthrough/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - external-app.external.svc.cluster.local
    tls:
      mode: PASSTHROUGH
