tunneling-outbound-traffic-kind/samples/https-proxy/gateway/tls/passthrough/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  # TODO: rename
  name: external-app-route-via-egress-gateway
spec:
  hosts:
  - external-app.external.svc.cluster.local
  gateways:
  - mesh
  tls:
  - match:
    - port: 443
      sniHosts:
      - external-app.external.svc.cluster.local
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: originate-tls-for-plain-traffic-to-external-app
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  # TODO: rename
  name: external-app-route-via-external-forward-proxy
spec:
  hosts:
  - external-app.external.svc.cluster.local
  gateways:
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - external-app.external.svc.cluster.local
    route:
    - destination:
        host: external-forward-proxy.external.svc.cluster.local
        subset: external-app-443
        port:
          number: 3128
